--- a/src/sass/green-line.scss
+++ b/src/sass/green-line.scss
@@ -66,7 +66,7 @@ $green-line-border-style: $green-line-border-width solid $green;
     content: "";
     border-left: $green-line-border-style;
     position: absolute;
-    height: calc(100% + 7.5vw);
+    height: 100%;
     z-index: -1;
     top: calc(-3vw - #{$green-line-border-width});
   }
